fix(项目设置): 首页测试计划遗留缺陷展示状态问题
--bug=1025852 --user=宋昌昌 【测试跟踪】首页-测试计划遗留缺陷统计-第三方平台的缺陷状态是空的 https://www.tapd.cn/55049933/s/1366970
--bug=1025825 --user=宋昌昌 【首页】接口首页、测试跟踪首页，浏览器调窄后统计数字显示不全 https://www.tapd.cn/55049933/s/1367280